feat: Implement cookie bypass authentication
- Add sessionCookie extension-level preference for browser cookie injection
- Modify iCloudSession.init() to inject cookie into axios headers
- Modify iCloudService.authenticate() to bypass SRP when cookie present
- Update Login.tsx to fast-track authentication with cookie
- Rewrite README with complete setup instructions
- Preserve legacy SRP code as fallback

Fixes broken authentication caused by Apple's SRP protocol changes in late 2024.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
   ],
   "license": "MIT",
   "categories": ["Productivity"],
+  "preferences": [
+    {
+      "name": "sessionCookie",
+      "title": "iCloud Session Cookie",
+      "description": "Paste the full 'Cookie' header from a logged-in icloud.com session. This bypasses the broken SRP login.",
+      "type": "password",
+      "required": false,
+      "placeholder": "X-APPLE-WEBAUTH-USER=..."
+    }
+  ],
   "commands": [
     {
       "name": "list-emails",
